--- a/src/main/webapp/WEB-INF/css/style.css
+++ b/src/main/webapp/WEB-INF/css/style.css
@@ -2,10 +2,33 @@ body{
     background: #F5D7CF;
 }
 
+
+/*
+HEADER
+ */
+
 #header{
     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
     text-align: center;
 }
+
+#header img{
+    height: 40%;
+    width: 40%;
+}
+
+#header table {
+    width: 100%;
+    margin: auto;
+}
+
+#header td {
+    padding: 1px;
+}
+
+/*
+MENU
+ */
 
 #menu {
     background: #F5D7CF;
@@ -15,8 +38,12 @@ body{
     text-align: right;
 }
 
+#menu p{
+    font-weight: bold;
+}
 
-table {
+
+#content table {
     font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
     text-align: center;
     border-collapse: separate;
@@ -29,17 +56,17 @@ table {
     width: 80%;
 }
 
-th {
+#content th {
     font-size: 18px;
     padding: 10px;
 }
 
-td {
+#content td {
     background: #F5D7BF;
     padding: 10px;
 }
 
-tbody tr:hover {
+#content tbody tr:hover {
     background: #f3bd48; /* Цвет фона при наведении */
     color: #fff; /* Цвет текста при наведении */
     /*font-weight: bold;*/
