--- a/src/main/webapp/WEB-INF/css/style.css
+++ b/src/main/webapp/WEB-INF/css/style.css
@@ -31,15 +31,32 @@ MENU
  */
 
 #menu {
-    background: #F5D7CF;
+    background: #ECE9E0;
+    color: #656665;
+    border-radius: 20px;
+    padding: 5px;
     float: left;
     width: 200px;
-    height: 500px;
+    /*height: 500px;*/
     text-align: right;
 }
 
-#menu p{
-    font-weight: bold;
+#menu table{
+    background: #ECE9E0;
+    text-align: center;
+    border-collapse: separate;
+    border-spacing: 4px;
+    color: #656665;
+    border: 18px solid #ECE9E0;
+    border-radius: 20px;
+    margin: auto;
+    /*width: 200px;*/
+}
+
+#menu tr{
+    background: #F5D7BF;
+    padding: 10px;
+
 }
 
 
@@ -50,7 +67,7 @@ MENU
     border-spacing: 5px;
     background: #ECE9E0;
     color: #656665;
-    border: 16px solid #ECE9E0;
+    border: 14px solid #ECE9E0;
     border-radius: 20px;
     margin: auto;
     width: 80%;
@@ -70,5 +87,47 @@ MENU
     background: #f3bd48; /* Цвет фона при наведении */
     color: #fff; /* Цвет текста при наведении */
     /*font-weight: bold;*/
+}
+
+#wrap{
+    display: none;
+    opacity: 0.8;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 16px;
+    background-color: rgba(1, 1, 1, 0.725);
+    z-index: 100;
+    overflow: auto;
+}
+
+#window{
+    width: 700px;
+    height: 400px;
+    margin: 50px auto;
+    display: none;
+    z-index: 200;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 16px;
+    background: #ECE9E0;
+    color: #656665;
+    border-radius: 20px;
+}
+#window img{
+    width: 10px;
+    height:10px;
+
+}
+
+.close{
+    margin-left: 364px;
+    margin-top: 4px;
+    cursor: pointer;
 }
 
